--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-input-mask": "^2.0.4",
     "tailwind-scrollbar": "^3.1.0",
     "yup": "^1.4.0"
   },
@@ -34,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
