--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@nextui-org/accordion": "^2.0.40",
     "@nextui-org/avatar": "^2.0.33",
     "@nextui-org/breadcrumbs": "^2.0.13",
     "@nextui-org/card": "^2.0.34",
@@ -29,6 +30,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.4.2",
     "tailwind-scrollbar": "^3.1.0",
     "yup": "^1.4.0"
   },
