--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nextui-org/theme": "^2.2.9",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
+    "lucide-react": "^0.468.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
